--- a/style.css
+++ b/style.css
@@ -23,19 +23,25 @@ body{
 .sidebar{
     background-color: rgb(63, 159, 190);
     grid-area: s;
-    justify-content: center;
-    padding: 9px;
+    padding: 15px;
 }
 .sidebarHeading{
     display: grid;
-    
+    grid-template-columns: 1fr 3fr;
+    justify-items: center;
+    align-items: center;
 }
+
+.sidebarHeading h2{
+    font-size: 3vw;
+}
+
 .sidebar ul li{
     list-style-type: none;
     font-size: 2vw;
 }
 .dashIcon{
-    height: 4vw;
+    height: 3vw;
 }
 .icons{
     height: 2vw;
