--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+*{
+    padding: 0;
+    margin: 0;
+}
+
+
 body{
     display: grid;
     grid-template-columns: 1fr 4fr;
@@ -23,25 +29,41 @@ body{
 .sidebar{
     background-color: rgb(63, 159, 190);
     grid-area: s;
-    padding: 15px;
+    padding: 40px;
 }
 .sidebarHeading{
     display: grid;
     grid-template-columns: 1fr 3fr;
-    justify-items: center;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .sidebarHeading h2{
-    font-size: 3vw;
+    font-size: 2.5vw;1
+}
+.sidebar ul{
+    padding: 10px;
+    /* margin-bottom: 20px; */
 }
 
 .sidebar ul li{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
     list-style-type: none;
-    font-size: 2vw;
+    font-size: 1.5vw;
 }
+
+a{
+    text-decoration: none;
+}
+
+li img{
+
+    justify-self: center;
+}
+
 .dashIcon{
-    height: 3vw;
+    height: 2.5vw;
 }
 .icons{
     height: 2vw;
