--- a/style.css
+++ b/style.css
@@ -21,8 +21,14 @@ body{
 .header{
     grid-area: h;
     background-color: blueviolet;
+    
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
 
 }
+
+
 
 /* Side bar */
 
@@ -39,18 +45,18 @@ body{
 }
 
 .sidebarHeading h2{
-    font-size: 2.5vw;1
+    font-size: 3vw;
 }
 .sidebar ul{
     padding: 10px;
-    /* margin-bottom: 20px; */
+
 }
 
 .sidebar ul li{
     display: grid;
     grid-template-columns: 1fr 3fr;
     list-style-type: none;
-    font-size: 1.5vw;
+    font-size: 2vw;
 }
 
 a{
@@ -73,4 +79,70 @@ li img{
 .projectBoard{
     background-color: goldenrod;
     grid-area: b;
+
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: 
+        'p a'
+        'p t'
+    ;
 }
+
+h3{
+    margin: 10px;
+    position: absolute;
+}
+
+.projects{
+    grid-area: p;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+}
+
+.announcements{
+    grid-area: a;
+}
+
+.trending{
+    grid-area: t;
+}
+
+
+.card{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 4fr 1fr;
+    grid-template-areas: 
+    'h .'
+    'pp pp'
+    '. co'
+    ;
+
+    border-left: 10px solid orange;
+    /* border: 1px solid; */
+    margin: 40px;
+    background-color: white;
+    padding: 20px;
+    box-shadow: 5px 5px 15px;
+    border-radius: 12px;
+}
+
+.card h4{
+    grid-area: h;
+
+}
+
+.card p{
+    grid-area: pp;
+    font-size: 20px;
+}
+
+.cardOptions{
+    grid-area: co;
+    display: flex;
+    justify-content: space-around;
+
+}
+
