--- a/style.css
+++ b/style.css
@@ -15,15 +15,16 @@ body {
     ;
 }
 
+.hasShading {
+    box-shadow: 0px 5px 15px;
+}
+
 /* Header styling */
 .header {
     grid-area: header;
     background-color: rgb(255, 255, 255);
-    padding: 10px;
+    padding: 20px;
     z-index: 1;
-    box-shadow: 0px 5px 15px;
-
-    /* Subgrid for header content */
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -33,12 +34,10 @@ body {
     ;
 }
 
-
 /* Styling for search bar within the header */
 .searchBar {
     grid-area: search-bar;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
@@ -53,20 +52,26 @@ body {
 /* Styling for user info within the header */
 .userInfo {
     grid-area: user-info;
-    
     display: flex;
-    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
 }
 
 /* Styling for greeting within the header */
 .greeting {
     grid-area: greeting;
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 /* Styling for functions within the header */
 .functions {
     grid-area: functions;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .functions ul {
@@ -75,15 +80,13 @@ body {
     list-style-type: none;
 }
 
-button{
+button {
     height: 1.7rem;
     width: 4.5rem;
     border-radius: 15px;
     border: none;
     background-color: rgb(63, 159, 190);
     color: white;
-    
-
 }
 
 /* Sidebar styling */
@@ -105,11 +108,13 @@ button{
 /* Styling for heading text within the sidebar */
 .sidebarHeading h2 {
     font-size: 3vw;
+    color: white;
 }
 
 /* Styling for unordered list within the sidebar */
 .sidebar ul {
     padding: 10px;
+    
 }
 
 /* Styling for list items within the sidebar */
@@ -123,6 +128,7 @@ button{
 /* Styling for anchor tags */
 a {
     text-decoration: none;
+    color: white;
 }
 
 /* Styling for images within list items */
@@ -138,14 +144,14 @@ li img {
 /* General styling for icons */
 .icons {
     height: 2vw;
+    fill: white;
+
 }
 
 /* Project board styling */
 .projectBoard {
     background-color: rgb(240, 240, 240);
     grid-area: project-board;
-
-    /* Subgrid for project board content */
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -156,9 +162,10 @@ li img {
 }
 
 /* Styling for heading within the project board */
-h3 {
-    margin: 10px;
+.projects h3 {
+    margin: 10px 0px 0px 40px;
     position: absolute;
+    
 }
 
 /* Styling for projects section */
@@ -171,11 +178,78 @@ h3 {
 /* Styling for announcements section */
 .announcements {
     grid-area: announcements;
+    display: grid;
+    
+}
+
+.announcements h3 {
+    position: absolute;
+    grid-area: heading;
+    margin: 10px 0px 0px 0px;
+}
+
+.updates {
+    grid-area: updates;
+    background-color: white;
+    border-radius: 10px;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    padding: 20px;
+    margin: 40px 20px 0px 0px;
+    grid-area: 1 ;
+}
+
+.updateInfo {
+    /* height: 30px; */
+    border: 1px solid;
+    height: 6em;
+    overflow: auto;
 }
 
 /* Styling for trending section */
-.trending {
+.trendingBoard{
+    display: grid;
     grid-area: trending;
+    margin: 0px 20px 40px 0px;
+
+}
+
+.trendingBoard h3{
+    position: absolute;
+    margin: 10px 0px 0px 0px;
+}
+
+.trending {
+    display: grid;
+    background-color: white;
+    border-radius: 10px;
+    margin-top: 40px;
+    padding: 20px;
+}
+.user{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: 
+    'userIcon userHeading'
+    'userIcon userPara'
+    ;
+
+}
+
+.user .icons{
+    grid-area: userIcon;
+    justify-self: center;
+    align-self: center;
+}
+.user h5{
+    grid-area: userHeading;
+    justify-self: start;
+    align-self: end;
+}
+.user p{
+    grid-area: userPara;
+    justify-self: start;
 }
 
 /* Styling for individual project cards */
@@ -188,12 +262,10 @@ h3 {
         'content content'
         '. options'
     ;
-
     border-left: 10px solid orange;
-    margin: 40px;
+    margin: 40px 20px 40px 40px;
     background-color: white;
     padding: 20px;
-    box-shadow: 5px 5px 15px;
     border-radius: 12px;
 }
 
